welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:1: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^Program:1: error: expected class or object definition
def haveBaggle():Boolean = {
^